# WordClock

./: .gitignore  README.md
src/: README.md  (+1 more)
src/base/pico-uart-bridge/: CMakeLists.txt
src/base/pico-uart-bridge/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
src/base/wordclock/: .gitignore  CMakeLists.txt  WORDCLOCK_V1_RP2040_3.1.0_Release.dis  WORDCLOCK_V1_RP2040_3.1.0_Release.elf  WORDCLOCK_V1_RP2040_3.1.0_Release.elf.map  WORDCLOCK_V1_RP2040_3.1.0_Release.hex  WORDCLOCK_V2_RP2040_3.1.0_Debug.dis  WORDCLOCK_V2_RP2040_3.1.0_Debug.elf  WORDCLOCK_V2_RP2040_3.1.0_Debug.elf.map  WORDCLOCK_V2_RP2040_3.1.0_Debug.hex  WORDCLOCK_V2_RP2040_3.1.0_Debug.uf2  WORDCLOCK_V2_RP2040_3.1.0_Release.dis  WORDCLOCK_V2_RP2040_3.1.0_Release.elf  WORDCLOCK_V2_RP2040_3.1.0_Release.elf.map  WORDCLOCK_V2_RP2040_3.1.0_Release.hex  WORDCLOCK_V2_RP2040_3.1.0_Release.uf2  WORDCLOCK_V2_RP2040_RP2040RTC_3.2.2_Release.dis  WORDCLOCK_V2_RP2040_RP2040RTC_3.2.2_Release.elf  WORDCLOCK_V2_RP2040_RP2040RTC_3.2.2_Release.elf.map  WORDCLOCK_V2_RP2040_RP2040RTC_3.2.2_Release.hex  WORDCLOCK_V2_RP2040_RP2040RTC_3.2.2_Release.uf2  WORDCLOCK_V2_RP2040_RP2040RTC_3.4.1_Release.dis  WORDCLOCK_V2_RP2040_RP2040RTC_3.4.1_Release.elf  WORDCLOCK_V2_RP2040_RP2040RTC_3.4.1_Release.elf.map  WORDCLOCK_V2_RP2040_RP2040RTC_3.4.1_Release.hex  WORDCLOCK_V2_RP2040_RP2040RTC_3.4.1_Release.uf2  WORDCLOCK_V2_RP2040_RP2040RTC_4.0.0_Debug.dis  WORDCLOCK_V2_RP2040_RP2040RTC_4.0.0_Debug.elf.map  WORDCLOCK_V2_RP2040_RP2040RTC_4.0.0_Debug.hex  WORDCLOCK_V2_RP2040_RP2040RTC_4.0.0_Debug.uf2  WORDCLOCK_V3_RP2040_3.2.3_Debug.dis  WORDCLOCK_V3_RP2040_3.2.3_Debug.elf.map  WORDCLOCK_V3_RP2040_3.2.3_Debug.hex  WORDCLOCK_V3_RP2040_3.2.3_Debug.uf2  build_all.sh  flash.sh  flash_debug.sh  flash_release.sh  wordclock.dis  wordclock.elf  (+3 more)
src/base/wordclock/PicoLED/: PicoLedTarget.cpp  WS2812B.cpp
src/base/wordclock/board/: README.md  WORDCLOCK_V1_RP2040.h  WORDCLOCK_V1_RP2040_GERMAN_ROTATED.h  WORDCLOCK_V1_RP2040_GPIO11.h  WORDCLOCK_V1_RP2040_ROTATED.h  WORDCLOCK_V2_RP2040.h  WORDCLOCK_V2_RP2040_NOI2C.h  WORDCLOCK_V2_RP2040_ROTATED.h  WORDCLOCK_V2_RP2040_RP2040RTC.h  WORDCLOCK_V3_RP2040.h
src/base/wordclock/build_u2f/: WORDCLOCK_V1_RP2040_3.2.0_Debug.uf2  WORDCLOCK_V1_RP2040_3.2.0_Release.uf2  WORDCLOCK_V1_RP2040_3.2.2_Debug.uf2  WORDCLOCK_V1_RP2040_3.2.2_Release.uf2  WORDCLOCK_V1_RP2040_3.3.0_Debug.uf2  WORDCLOCK_V1_RP2040_3.3.0_Release.uf2  WORDCLOCK_V1_RP2040_3.3.2_Debug.uf2  WORDCLOCK_V1_RP2040_3.3.2_Release.uf2  WORDCLOCK_V1_RP2040_3.4.0_Debug.uf2  WORDCLOCK_V1_RP2040_3.4.0_Release.uf2  WORDCLOCK_V1_RP2040_3.4.1_Debug.uf2  WORDCLOCK_V1_RP2040_3.4.1_Release.uf2  WORDCLOCK_V1_RP2040_4.0.0_Debug.uf2  WORDCLOCK_V1_RP2040_4.0.0_Release.uf2  WORDCLOCK_V1_RP2040_GPIO11_4.0.0_Debug.uf2  WORDCLOCK_V1_RP2040_GPIO11_4.0.0_Release.uf2  WORDCLOCK_V2_RP2040_3.2.0_Debug.uf2  WORDCLOCK_V2_RP2040_3.2.0_Release.uf2  WORDCLOCK_V2_RP2040_3.2.2_Debug.uf2  WORDCLOCK_V2_RP2040_3.2.2_Release.uf2  WORDCLOCK_V2_RP2040_3.3.0_Debug.uf2  WORDCLOCK_V2_RP2040_3.3.0_Release.uf2  WORDCLOCK_V2_RP2040_3.3.2_Debug.uf2  WORDCLOCK_V2_RP2040_3.3.2_Release.uf2  WORDCLOCK_V2_RP2040_3.4.0_Debug.uf2  WORDCLOCK_V2_RP2040_3.4.0_Release.uf2  WORDCLOCK_V2_RP2040_3.4.1_Debug.uf2  WORDCLOCK_V2_RP2040_3.4.1_Release.uf2  WORDCLOCK_V2_RP2040_4.0.0_Debug.uf2  WORDCLOCK_V2_RP2040_4.0.0_Release.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.2.0_Debug.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.2.0_Release.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.2.2_Debug.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.2.2_Release.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.3.0_Release.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.3.1_Debug.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.3.2_Debug.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.3.2_Release.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.4.0_Debug.uf2  WORDCLOCK_V2_RP2040_NOI2C_3.4.0_Release.uf2  (+18 more)
src/base/wordclock/elf2uf2/: elf2uf2
src/base/wordclock/pioasm/: pioasm
src/base/wordclock/src/: helper.cpp  helper.h  main.cpp  main.h  programinfo.h  rtc.cpp  rtc.h  settings_storage.cpp  settings_storage.h  settings_storage.hpp  settings_storage_eeprom.cpp  settings_storage_eeprom.hpp  settings_storage_flash.cpp  settings_storage_flash.hpp  wifi_interface.cpp  wifi_interface.h  wifi_interface.hpp  wordclock_faceplate.cpp  wordclock_faceplate.hpp  wordclock_faceplate_binary.cpp  wordclock_faceplate_binary.hpp  wordclock_faceplate_english.cpp  wordclock_faceplate_english.hpp  wordclock_faceplate_german.cpp  wordclock_faceplate_german.hpp
src/base/wordclock/src/ambient_light/: ambient_light.cpp  ambient_light.h  ambient_light.hpp  ambient_light_bh1750.cpp  ambient_light_bh1750.hpp  ambient_light_include.h
src/base/wordclock/src/firmware/: README.md  firmware.cpp  firmware.hpp  firmware_data.hpp
src/base/wordclock/src/rtc/: rtc.cpp  rtc.h  rtc.hpp  rtc_ds1307.cpp  rtc_ds1307.h  rtc_i2c.cpp  rtc_i2c.h  rtc_i2c.hpp  rtc_include.h  rtc_pcf85263.cpp  rtc_pcf85263.h  rtc_rp2040.cpp  rtc_rp2040.h  rtc_rp2040.hpp
src/base/wordclock/src/settings_storage/: settings_storage.cpp  settings_storage.hpp  settings_storage_eeprom.cpp  (+4 more)
src/base_rp2040_picosdk/wordclock/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wordclock.dis  wordclock.elf  wordclock.elf.map  wordclock.hex  wordclock.uf2
src/base_rp2040_picosdk/wordclock/board/: README.md  WORDCLOCK_V1_RP2040.h
src/base_rp2040_picosdk/wordclock/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
src/base_rp2040_picosdk/wordclock/pico-sdk/: Makefile  cmake_install.cmake
src/base_rp2040_picosdk/wordclock/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
src/base_rp2040_picosdk/wordclock/src/: helper.cpp  helper.h  main.cpp  rtc.cpp  rtc.h  wifi_interface.cpp  wifi_interface.h  wordclock_faceplate.cpp  wordclock_faceplate.hpp  wordclock_faceplate_binary.cpp  wordclock_faceplate_binary.hpp  wordclock_faceplate_dots.cpp  wordclock_faceplate_dots.hpp  wordclock_faceplate_english.cpp  wordclock_faceplate_english.hpp  wordclock_faceplate_german.cpp  wordclock_faceplate_german.hpp  wordclock_faceplate_include.h  wordclock_helper.cpp  wordclock_helper.h
(+270 files in other folders)
